Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.2
-
-
1040728e3 (dev), 6ad615cd1 (6.9), c46ac58ea (6.8)
Description
I am using KDE neon Unstable Edition with qt6-base package version 6.8.2-0zneon+24.04+noble+unstable+build68.
This crashes since qt 6.8.2 (no crash in qt 6.8.1):
myqtapp.cpp
#include <QApplication> int main(){ char myqtapp[]{"myqtapp"}; char platform[]{"-platform"}; char xcb[]{"xcb"}; char *argv[4]{myqtapp,platform,xcb,0}; int argc{3}; QApplication app(argc,argv); exit(0); }
compiler command line
g++ -o myqtapp myqtapp.cpp -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -lQt6Core -lQt6Widgets
Attachments
Issue Links
- is duplicated by
-
QTBUG-133962 Segmentation fault in QInputDevicePrivate::unregisterDevice when calling exit() while Wacom Tablet is plugged in
-
- Closed
-
- relates to
-
QTBUG-133500 [REG 6.8.1 -> 6.8.2] Crash on exit during logging of thread destruction
-
- Closed
-
-
QTBUG-95468 XCB: Memory leak of QXcbScrollingDevicePrivate for a device that is not a mouse
-
- Closed
-
For Gerrit Dashboard: QTBUG-133776 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
624868,3 | GUI: no need to unregister input device if list is destroyed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
624899,2 | GUI: no need to unregister input device if list is destroyed | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
624949,2 | GUI: no need to unregister input device if list is destroyed | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |